# py-scripts

./: .gitignore  pyproject.toml
src/scripts/: __init__.py
